--- a/.tx/config
+++ b/.tx/config
@@ -1,7 +1,7 @@
 [main]
 host = https://www.transifex.com
 
-[opps.promos]
+[opps-blogs.blogs]
 file_filter = opps/blogs/locale/<lang>/LC_MESSAGES/django.po
 source_file = opps/blogs/locale/en/LC_MESSAGES/django.po
 source_lang = en
